--- a/tools/sidekick/plugins/blocks.css
+++ b/tools/sidekick/plugins/blocks.css
@@ -80,6 +80,18 @@
   border-bottom: 1px solid #676767;
 }
 
+.content-type p:after {
+  content: '';
+  border: solid #777777;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  position: absolute;
+  right: 14px;
+  top: 17px;
+  transform: rotate(-45deg);
+}
+
 .con-Assets-list li {
   width: 120px;
   height: 120px;
@@ -101,7 +113,7 @@ li button {
   background-repeat: no-repeat;
   width: 44px;
   height: 44px;
-  display: block;
+  display: none;
   position: absolute;
   right: 0;
   top: 0;
@@ -116,12 +128,16 @@ li button {
   border-radius: 4px;
 }
 
-.con-Assets-list li:hover button {
+li:hover button {
   display: unset;
 }
 
 .con-finder .con-Assets-list li button:hover {
   background-color: rgb(48 48 48 / 80%);
+}
+
+.con-finder .con-Assets-list li {
+  border-bottom: none;
 }
 
 .con-Colors-list li {
@@ -146,9 +162,9 @@ li button:hover {
   background-color: rgba(255,255,255,0.05);
 }
 
-.con-finder li:last-child {
+/* .con-finder li:last-child {
   border-bottom: none;
-}
+} */
 
 .con-finder p {
   margin: 0;
