--- a/blocks/marquee/marquee.css
+++ b/blocks/marquee/marquee.css
@@ -1,20 +1,15 @@
 .marquee {
-    min-height: 560px;
     position: relative;
     color: #FFF;
     display: flex;
-}
-
-.marquee.light, .marquee.quiet, .marquee.inline {
-    color: #000;
 }
 
 .marquee.small, .marquee.quiet, .marquee.inline {
     min-height: 360px;
 }
 
-.marquee.large {
-    min-height: 700px;
+.marquee.light, .marquee.quiet, .marquee.inline {
+    color: #2C2C2C;
 }
 
 .marquee.centered {
@@ -24,10 +19,7 @@
 .marquee .background picture {
     display: block;
     position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
+    inset: 0;
 }
 
 .marquee .background img {
@@ -38,29 +30,57 @@
 
 .marquee .foreground {
     position: relative;
-    display: block;
+    display: flex;
     align-items: center;
-    justify-content: space-between;
+    flex-direction: column;
+    gap: var(--spacing-m);
+    padding: var(--spacing-xl) 0;
 }
 
-.marquee .foreground > div {
-    flex: 0 0 calc(50% - calc(var(--grid-column-width) / 2));
+.marquee.small .foreground {
+    padding: var(--spacing-l) 0;
+}
+
+.marquee.large .foreground.container {
+    max-width: 100%;
+    padding: 0 0 var(--spacing-m) 0;
 }
 
 .marquee.quiet .foreground > div {
     flex: 0 0 100%;
 }
 
+.marquee.large .text {
+    max-width: var(--grid-container-width);
+    display: flex;
+    flex-direction: column;
+}
+
 .marquee .text .detail-M {
-    margin-bottom: 16px;
+  margin-bottom: var(--spacing-xs);
+}
+
+.marquee .text .detail-L {
+  order: 1;
+  margin-bottom: var(--spacing-xs);
 }
 
 .marquee .text .heading-XL {
-    margin-bottom: 16px;
+    margin-bottom: var(--spacing-xs);
+}
+
+.marquee .text .heading-XXL {
+    order: 2;
+    margin-bottom: var(--spacing-m);
 }
 
 .marquee .text .body-M {
-    margin-bottom: 24px;
+    margin-bottom: var(--spacing-s);
+}
+
+.marquee .text .body-XL {
+  order: 4;
+  margin-bottom: var(--spacing-s);
 }
 
 .marquee .text img {
@@ -69,8 +89,13 @@
 
 .marquee .text .action-area {
     display: flex;
-    margin: 0 0 24px 0;
-    gap: 24px;
+    margin: 0;
+    gap: var(--spacing-s);
+}
+
+.marquee.large .text .action-area {
+  order: 3;
+  margin-bottom: var(--spacing-s);
 }
 
 .marquee.quiet.centered .action-area {
@@ -82,8 +107,66 @@
     width: 100%;
 }
 
-@media screen and (min-width: 1440px) {
-    .marquee .foreground {
-        display: flex;
+.marquee .text,
+.marquee.large .text {
+    order: 2;
+}
+
+.marquee .image,
+.marquee.large .image {
+    order: 1;
+}
+
+.marquee.small .text,
+.marquee.small .image {
+    order: unset;
+}
+
+@media screen and (min-width: 600px) {
+    .marquee {
+        min-height: 560px;
     }
+
+    .marquee.large {
+        min-height: 700px;
+    }
+
+    .marquee .foreground {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .marquee.large .foreground.container {
+      max-width: var(--grid-container-width);
+    }
+    
+    .marquee .foreground > div {
+        flex: 0 0 calc(50% - calc(var(--grid-column-width) / 2));
+    }
+    
+    .marquee.medium .text,
+    .marquee.large .text {
+        order: unset;
+    }
+
+    .marquee.large .text {
+      display: block;
+    }
+
+    .marquee.medium .image,
+    .marquee.large .image {
+        order: unset;
+    }
+
+    .marquee .text .action-area,
+    .marquee.small .text .action-area,
+    .marquee.large .text .action-area {
+      margin-bottom: 0;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+  .marquee.large .foreground.container {
+    max-width: var(--grid-container-width);
+  }
 }
