fix cta sizes on desktop

--- a/blocks/marquee/marquee.css
+++ b/blocks/marquee/marquee.css
@@ -205,6 +205,11 @@
     margin-bottom: 0;
   }
 
+  .marquee .action-area a {
+    width: unset;
+    text-align: center;
+  }
+
   .marquee.large .action-area {
     gap: var(--spacing-xl);
   }
