zpattern block, global styles, fragment dup->PR

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,23 +16,52 @@
 
 :root {
     /* Typography */
+    --type-transform: uppercase;
     --type-detail-all-weight: 700;
     --type-detail-m-size: 12px;
     --type-detail-m-lh: 15px;
-    --type-detail-m-transform: uppercase;
+    --type-detail-l-size: 16px;
+    --type-detail-l-lh: 20px;
 
     --type-heading-all-weight: 700;
     --type-heading-xl-size: 36px;
     --type-heading-xl-lh: 45px;
+    --type-heading-l-size: 28px;
+    --type-heading-l-lh: 32px;
+    --type-heading-m-size: 24px;
+    --type-heading-m-lh: 30px;
+    --type-heading-s-size: 22px;
+    --type-heading-s-lh: 28px;
+    --type-heading-xs-size: 18px;
+    --type-heading-xs-lh: 22px;
 
     --type-body-m-size: 18px;
     --type-body-m-lh: 27px;
-    
+    --type-body-s-size: 16px;
+    --type-body-s-lh: 24px;
+
     /* Spacing */
+    --spacing-xs: 8px;
+    --spacing-s: 16px;
+    --spacing-m: 24px;
+    --spacing-ml: 32px;
+    --spacing-l: 48px;
+    --spacing-xl: 56px;
+    --spacing-xxl: 80px;
 
     /* Grid */
     --grid-container-width: 83.4%;
     --grid-column-width: 7.025%;
+
+    /* Color */
+    --hue:213; /*the base hue*/
+    --saturation: 84%; /*the base saturation*/
+    --light: 49%; /*the base lightness*/
+    --blue-hsl: var(--hue), var(--saturation), var(--light); /* adobe blue #1473e6 */
+
+    --color-primary: #1473e6;
+    --color-primary-darker: hsl(var(--hue), var(--saturation), calc(var(--light) - 10%));
+    --color-primary-lighter: hsl(var(--hue), var(--saturation), calc(var(--light) + 20%));
 }
 
 @media screen and (min-width: 1440px) {
@@ -56,6 +85,27 @@ body {
 }
 
 /* Typography */
+.heading-XS {
+  font-size: var(--type-heading-xs-size);
+  line-height: var(--type-heading-xs-lh);
+  font-weight: var(--type-heading-all-weight);
+  margin: 0;
+}
+
+.heading-M {
+  font-size: var(--type-heading-m-size);
+  line-height: var(--type-heading-m-lh);
+  font-weight: var(--type-heading-all-weight);
+  margin: 0;
+}
+
+.heading-L {
+  font-size: var(--type-heading-l-size);
+  line-height: var(--type-heading-l-lh);
+  font-weight: var(--type-heading-all-weight);
+  margin: 0;
+}
+
 .heading-XL {
     font-size: var(--type-heading-xl-size);
     line-height: var(--type-heading-xl-lh);
@@ -69,12 +119,26 @@ body {
     margin: 0;
 }
 
+.body-S {
+  font-size: var(--type-body-s-size);
+  line-height: var(--type-body-s-lh);
+  margin: 0;
+}
+
 .detail-M {
     font-size: var(--type-detail-m-size);
     line-height: var(--type-detail-m-lh);
     font-weight: var(--type-detail-all-weight);
-    text-transform: var(--type-detail-m-transform);
+    text-transform: var(--type-transform);
     margin: 0;
+}
+
+.detail-L {
+  font-size: var(--type-detail-l-size);
+  line-height: var(--type-detail-l-lh);
+  font-weight: var(--type-detail-all-weight);
+  text-transform: var(--type-transform);
+  margin: 0;
 }
 
 /* Buttons */
@@ -97,6 +161,24 @@ body {
 
 .con-button.blue {
     color: #FFF;
-    background: rgb(20, 115, 230);
-    border: 2px solid rgb(20, 115, 230);
+    background: var(--color-primary);
+    border: 2px solid var(--color-primary);
+}
+
+.con-button.blue:hover,
+.con-button.blue:active {
+  background: var(--color-primary-darker);
+  border: 2px solid var(--color-primary-darker);
+}
+
+.con-button.outline {
+  color: #000;
+  background: #fff;
+  border: 2px solid rgb(0, 0, 0);
+}
+
+.con-button.outline:hover,
+.con-button.outline:active {
+  color: #fff;
+  background: #000;
 }
