--- a/styles/styles.css
+++ b/styles/styles.css
@@ -183,13 +183,6 @@ body {
   margin: 0;
 }
 
-.heading-L {
-  font-size: var(--type-heading-l-size);
-  line-height: var(--type-heading-l-lh);
-  font-weight: var(--type-heading-all-weight);
-  margin: 0;
-}
-
 .body-M {
   font-size: var(--type-body-m-size);
   line-height: var(--type-body-m-lh);
@@ -250,7 +243,7 @@ body {
 
 .con-button.outline {
   color: #000;
-  background: transparent;
+  background: #fff;
   border: 2px solid rgb(0, 0, 0);
 }
 
