--- a/styles/styles.css
+++ b/styles/styles.css
@@ -110,6 +110,8 @@
     --type-heading-s-lh: 25px;
     --type-heading-xs-size: 18px;
     --type-heading-xs-lh: 22.5px;
+
+    --spacing-xxl: 104px;
   }
 }
 
