--- a/blocks/text/text.css
+++ b/blocks/text/text.css
@@ -50,7 +50,8 @@
   margin: 0 0 var(--spacing-s);
 }
 
-.text .full-width a:first-child:last-child {
+.text .full-width a:first-child:last-child,
+.text .vertical a:not(.con-button) {
   color: var(--color-primary);
   font-weight: 700;
 }
@@ -63,44 +64,42 @@
   margin: 0 0 var(--spacing-ml);
 }
 
-.text .two-up,
-.text .three-up {
+.text .vertical {
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-.text .two-up > div,
-.text .three-up > div {
+.text .vertical > div {
   margin: 0 0 var(--spacing-ml)
 }
 
-.text .two-up p:first-child,
-.text .three-up p:first-child {
+.text .vertical p:first-child {
   margin: 0;
 }
 
-.text .two-up strong:first-child:last-child,
-.text .two-up h1,
-.text .two-up h2,
-.text .two-up h3,
-.text .two-up h4,
-.text .two-up h5,
-.text .two-up h6,
-.text .three-up strong:first-child:last-child,
-.text .three-up h1,
-.text .three-up h2,
-.text .three-up h3,
-.text .three-up h4,
-.text .three-up h5,
-.text .three-up h6 {
+.text .vertical a:not(.con-button) {
+  font-size: var(--type-body-xs-size);
+  line-height: var(--type-body-xs-lh);
+}
+
+.text .vertical a.outline + a {
+  margin-left: var(--spacing-m);
+}
+
+.text .vertical strong:first-child:last-child,
+.text .vertical h1,
+.text .vertical h2,
+.text .vertical h3,
+.text .vertical h4,
+.text .vertical h5,
+.text .vertical h6 {
   font-size: var(--type-heading-s-size);
   line-height: var(--type-heading-s-lh);
   margin: 0 0 var(--spacing-s);
 }
 
 @media screen and (min-width: 768px) {
-  .text .two-up > div,
-  .text .three-up > div {
+  .text .vertical > div {
     flex: 0 0 calc(50% - calc(var(--spacing-ml) / 2));
   }
 }
